mxslc/tests/data/error/version_3.mxsl
vec2 uv = texcoord();
vec2 vu = swizzle(uv, "yx");
